# 2D_game_CPP

./: CMakeLists.txt  Enum.hpp  GameObject.cpp  GameObject.hpp  Map.cpp  Map.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  README.md  Sprite.cpp  Sprite.hpp  Window.hpp  main.cpp  settings.json
src/: main.cpp
src/controllers/headers/: AllControllers.hpp  ControllerCollisions.hpp
src/controllers/implementations/: ControllerCollisions.cpp
src/headers/: AllClass.hpp  GameObject.hpp  Map.hpp  Obstacle.hpp  Player.hpp  Projectile.hpp  Sprite.hpp
src/implementations/: GameObject.cpp  Map.cpp  Obstacle.cpp  Player.cpp  Projectile.cpp  Sprite.cpp  Window.cpp
